// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given - Radio component and props are: {"selected":false,"style":{"marginBottom":10}} should render correctly and match snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderColor": "#00B5B8",
      "borderRadius": 25,
      "borderWidth": 1,
      "height": 25,
      "justifyContent": "center",
      "marginBottom": 10,
      "opacity": 1,
      "width": 25,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 17,
          "height": 17,
          "width": 17,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  />
</View>
`;

exports[`Given - Radio component and props are: {"selected":true,"style":{"marginBottom":10}} should render correctly and match snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderColor": "#00B5B8",
      "borderRadius": 25,
      "borderWidth": 1,
      "height": 25,
      "justifyContent": "center",
      "marginBottom": 10,
      "opacity": 1,
      "width": 25,
    }
  }
>
  <View
    style={
      [
        {
          "borderRadius": 17,
          "height": 17,
          "width": 17,
        },
        {
          "backgroundColor": "#00B5B8",
        },
      ]
    }
  />
</View>
`;
